# Nexus3D

./: files.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/audixlab/nexus/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/nexus/nexus3d/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DspContext.h  DspMath.h  ProcessorChain.cpp  dsp_native.cpp  dsp_stub.cpp
app/src/main/cpp/modules/: Modules.cpp  Modules.h
app/src/main/java/com/audixlab/nexus/: CustomAudioProcessor.kt  DspNativeBridge.kt  MainActivity.kt  NexusApplication.kt  PlaybackService.kt
app/src/main/java/com/audixlab/nexus/audio/: AudioController.kt
app/src/main/java/com/audixlab/nexus/core/data/: DatabaseModule.kt  LocalMediaScanner.kt  NexusDatabase.kt  PresetDao.kt  PresetEntity.kt  SettingsEntity.kt  TrackDao.kt  TrackEntity.kt
app/src/main/java/com/audixlab/nexus/core/domain/: DspRepository.kt  MacroMapper.kt
app/src/main/java/com/audixlab/nexus/feature/player/: PlayerScreen.kt  (+1 more)
app/src/main/java/com/nexus/nexus3d/: CustomAudioProcessor.kt  DspNativeBridge.kt  MainActivity.kt  PlaybackService.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/audixlab/nexus/: ExampleUnitTest.kt
app/src/test/java/com/nexus/nexus3d/: ExampleUnitTest.kt
dox/: About Nexus  DSP_optimization_implementation_plan  HRTF Fix Plan  master plan.md  master_implementation_plan.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
